--- a/cyztookit/res/layout/hello_activity.xml
+++ b/cyztookit/res/layout/hello_activity.xml
@@ -15,5 +15,11 @@
     android:layout_height="wrap_content"
     android:text="button!"
     />
+<Button android:id="@+id/buttonOpenDialog"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="buttonDialog"
+    android:layout_below="@id/button1"
+    />
 </RelativeLayout>
 
