--- a/cyztookit/res/layout/forth_activity.xml
+++ b/cyztookit/res/layout/forth_activity.xml
@@ -1,25 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     >
 <Button android:id="@+id/btnfour1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="open 1"
+    android:text="普通对话框"
     />
 <Button android:id="@+id/btnfour2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="open 2"
-    android:layout_below="@id/btnfour1"
+    android:text="单选列表对话框"
     />
 <Button android:id="@+id/btnfour3"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="open 3"
-    android:layout_below="@id/btnfour2"
+    android:text="多选列表对话框"
     />
-</RelativeLayout>
+<Button 
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="自定义视图对话框"
+    android:onClick="btnDiyDialog"
+    />
+<Button 
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="进度条对话框"
+    android:onClick="btnProgressDialog"
+    />
+<Button 
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="日期选择对话框"
+    android:onClick="btnDatepickerDialog"
+    />
+</LinearLayout>
 
