--- a/cyztookit/res/layout/second_activity.xml
+++ b/cyztookit/res/layout/second_activity.xml
@@ -25,6 +25,7 @@
     android:layout_height="wrap_content"
     android:hint="输入提示！"
     android:inputType="phone"
+    android:id="@+id/saipt"
     />
 <Button 
     android:layout_width="match_parent"
@@ -44,6 +45,7 @@ android:layout_gravity="center"-->
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:gravity="center"
         >
         <TextView
             android:layout_width="wrap_content"
@@ -66,6 +68,47 @@ android:layout_gravity="center"-->
             android:layout_height="wrap_content"
             android:text="游泳"
             />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="确定"
+            />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="性别："
+            />
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="男"
+            />
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="女"
+            />
+        </RadioGroup>
+    </LinearLayout>
+    <ToggleButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textOn="oo"
+        android:textOff="ff"
+        android:background="@drawable/selector"
+        android:checked="true"
+        />
 </LinearLayout>
 </ScrollView>
