--- a/cyztookit/res/layout/activity_camera.xml
+++ b/cyztookit/res/layout/activity_camera.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".CameraActivity">
+    <Button
+        android:text="打开摄像头"
+        android:onClick="btnOpenCamera"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+    <ImageView
+        android:layout_width="500dp"
+        android:layout_height="500dp"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/iv_lifa"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
