完成了表单填写jni

--- a/cyztookit/res/layout/third_activity.xml
+++ b/cyztookit/res/layout/third_activity.xml
@@ -41,7 +41,16 @@
 <Button android:id="@+id/btnthi1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="open 1"
+    android:text="模拟加载"
+    />
+<TextView
+    android:id="@+id/tvlog"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
+    android:text="调试信息"
+    android:textSize="18sp"
+    android:textStyle="bold"
     />
 <Button android:id="@+id/btnthi2"
     android:layout_width="match_parent"
