--- a/cyztookit/res/layout/hello_activity.xml
+++ b/cyztookit/res/layout/hello_activity.xml
@@ -6,11 +6,10 @@
     android:orientation="vertical"
     >
 <TextView android:id="@+id/text"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerHorizontal="true"
-    android:layout_centerVertical="true"
-    android:text="@string/hello_activity_text_text" />
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
+	android:layout_gravity="center_horizontal|center_vertical"
+	android:text="@string/hello_activity_text_text" />
 <Button android:id="@+id/button1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
