--- a/cyztookit/res/layout/second_activity.xml
+++ b/cyztookit/res/layout/second_activity.xml
@@ -26,6 +26,7 @@
     android:hint="输入提示！"
     android:inputType="phone"
     android:id="@+id/saipt"
+    android:autofillHints="aaa"
     />
 <Button 
     android:layout_width="match_parent"
@@ -39,6 +40,7 @@ android:layout_gravity="center"-->
     android:layout_height="280sp"
     android:src="@drawable/img"
     android:background="#ff0000"
+    android:contentDescription="image"
 
     />
     <LinearLayout
