--- a/cyztookit/res/layout/activity_camera.xml
+++ b/cyztookit/res/layout/activity_camera.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         />
     <ImageView
-        android:contentDescription="image"
+	    android:contentDescription="@string/imageHolder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
