--- a/cyztookit/res/layout/dialog_activity.xml
+++ b/cyztookit/res/layout/dialog_activity.xml
@@ -7,7 +7,7 @@
 <Button android:id="@+id/button3"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="button!Dialog"
+	android:text="@string/dialogBtn"
     />
 </RelativeLayout>
 
