--- a/cyztookit/res/menu/menu.xml
+++ b/cyztookit/res/menu/menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/item1" android:title="菜单1"/>
-    <item android:id="@+id/item2" android:title="菜单2"/>
+	<item android:id="@+id/item1" android:title="@string/globalMenu1"/>
+	<item android:id="@+id/item2" android:title="@string/globalMenu2"/>
 </menu>
