--- a/cyztookit/res/layout/viewpager_activity.xml
+++ b/cyztookit/res/layout/viewpager_activity.xml
@@ -18,6 +18,7 @@
     </LinearLayout>
     <TextView 
 	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
 	    android:text="@string/btn3" />
 </LinearLayout>
 
