--- a/cyztookit/res/layout/hello_activity.xml
+++ b/cyztookit/res/layout/hello_activity.xml
@@ -40,5 +40,10 @@
     android:layout_height="wrap_content"
 	android:text="@string/helloViewPager"
     />
+<Button android:id="@+id/btnExampleFragment"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:text="@string/btnExampleFragment"
+	/>
 </LinearLayout>
 
