--- a/cyztookit/res/layout/hello_activity.xml
+++ b/cyztookit/res/layout/hello_activity.xml
@@ -42,7 +42,7 @@
     />
 <Button android:id="@+id/btnExampleFragment"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
+	android:layout_height="wrap_content"
 	android:text="@string/btnExampleFragment"
 	/>
 </LinearLayout>
