--- a/cyztookit/res/layout/hello_activity.xml
+++ b/cyztookit/res/layout/hello_activity.xml
@@ -45,5 +45,10 @@
 	android:layout_height="wrap_content"
 	android:text="@string/btnExampleFragment"
 	/>
+<Button android:id="@+id/btnLog"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	android:text="@string/btnLog"
+	/>
 </LinearLayout>
 
