--- a/cyztookit/res/layout/activity_log.xml
+++ b/cyztookit/res/layout/activity_log.xml
@@ -12,6 +12,8 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:scrollbars="vertical"
+	    android:importantForAutofill="false"
+	    android:hint="@string/example_fragment_simpletxt"
         />
 
 </LinearLayout>
