--- a/cyztookit/res/layout/activity_log.xml
+++ b/cyztookit/res/layout/activity_log.xml
@@ -12,7 +12,7 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:scrollbars="vertical"
-	    android:importantForAutofill="false"
+	    android:importantForAutofill="no"
 	    android:hint="@string/example_fragment_simpletxt"
         />
 
