--- a/cyztookit/res/layout/activity_viewmodel.xml
+++ b/cyztookit/res/layout/activity_viewmodel.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
 	>
+<Button
+	android:id="@+id/viewmodelBtnA"
+	android:text="@string/activityFragTestBtnReplace"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	/>
 <TextView
 	android:id="@+id/viewmodeltxta"
         android:text="@string/activityFragTestBtnAdd"
