--- a/cyztookit/res/layout/activity_fragmenttest.xml
+++ b/cyztookit/res/layout/activity_fragmenttest.xml
@@ -25,7 +25,7 @@
     android:baselineAligned="false"
 	>
 
-<androidx.fragment.app.fragment
+<androidx.fragment.app.FragmentContainerView
 	android:name="com.example.android.helloactivity.ExampleFragment"
 	android:layout_weight="1"
 	android:layout_width="0dp"
